[project]
name = "pyjpx-etf"
version = "0.3.3"
description = "A clean, beginner-friendly Python library for fetching JPX ETF portfolio composition (PCF) data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "obichan117" }]
keywords = ["jpx", "etf", "pcf", "portfolio", "finance", "japan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.32",
    "pandas>=2.0",
    "xlrd>=2.0",  # required by pd.read_excel for JPX master .xls files
    "lxml>=5.0",  # required by pd.read_html for JPX ETF fee page
]

[project.urls]
Homepage = "https://github.com/obichan117/pyjpx-etf"
Documentation = "https://obichan117.github.io/pyjpx-etf"
Repository = "https://github.com/obichan117/pyjpx-etf"

[project.scripts]
etf = "pyjpx_etf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyjpx_etf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that hit real endpoints"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.27",
    "twine>=6.0",
    "build>=1.0",
]
